# ELC-test

./: .gitignore  CMakeLists.txt  Hashmap.c  Hashmap.h  LICENSE  Lexer.c  Lexer.h  Makefile  Parser.c  Parser.h  README.md  Token.c  Token.h  main.c
test/: CMakeLists.txt  main.c
